--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="나혼자 산다."/>
 	<meta property="og:description" content="혼자 사는 자취생들을 위한 set" />
 	<meta property="og:type" content="website" />
-	<meta property="og:url" content="https://happyesooa.github.io/sooa22/"/>
+	<meta property="og:url" content="https://happyesooa.github.io/sooa22/."/>
 	<meta property="og:image" content="tttt.jpg" />
 
 	<style>
